kustomize/lamp-app/base/manifests.yaml
---
# Source: lamp-app/charts/mariadb/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: lamp-app-mariadb
  namespace: "default"
  labels:
    app.kubernetes.io/instance: lamp-app
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/version: 12.2.2
    app.kubernetes.io/part-of: mariadb
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: lamp-app
      app.kubernetes.io/name: mariadb
      app.kubernetes.io/version: 12.2.2
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 3306
        - port: 3306
---
# Source: lamp-app/charts/mariadb/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lamp-app-mariadb-headless
  namespace: "default"
  labels:
    app.kubernetes.io/instance: lamp-app
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/version: 12.2.2
    app.kubernetes.io/part-of: mariadb
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
  selector:
    app.kubernetes.io/instance: lamp-app
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/part-of: mariadb
---
# Source: lamp-app/charts/mariadb/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lamp-app-mariadb
  namespace: "default"
  labels:
    app.kubernetes.io/instance: lamp-app
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/version: 12.2.2
    app.kubernetes.io/part-of: mariadb
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
  selector:
    app.kubernetes.io/instance: lamp-app
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/component: primary
---
# Source: lamp-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lamp-app
  labels:
    app: lamp-app
spec:
  type: ClusterIP
  selector:
    app: lamp-app
  ports:
    - port: 8080
      targetPort: 8080
---
# Source: lamp-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lamp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lamp-app
  template:
    metadata:
      labels:
        app: lamp-app
    spec:
      containers:
        - name: apache-php
          image: "kosmolito/php82-nonroot:latest"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-code
              mountPath: /var/www/html
            - name: app-code
              mountPath: /etc/apache2/ports.conf
              subPath: apache.conf
      volumes:
        - name: app-code
          configMap:
            name: lamp-app
---
# Source: lamp-app/charts/mariadb/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lamp-app-mariadb
  namespace: "default"
  labels:
    app.kubernetes.io/instance: lamp-app
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/version: 12.2.2
    app.kubernetes.io/part-of: mariadb
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: lamp-app
      app.kubernetes.io/name: mariadb
      app.kubernetes.io/part-of: mariadb
      app.kubernetes.io/component: primary
  serviceName: lamp-app-mariadb-headless
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configuration: 1c1f39b0b7702584d13dd2f7b14824386e63b52fb555759eb7c073d55a7e5610
      labels:
        app.kubernetes.io/instance: lamp-app
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/version: 12.2.2
        app.kubernetes.io/part-of: mariadb
        app.kubernetes.io/component: primary
    spec:
      
      automountServiceAccountToken: false
      serviceAccountName: lamp-app-mariadb
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: lamp-app
                    app.kubernetes.io/name: mariadb
                    app.kubernetes.io/component: primary
                topologyKey: kubernetes.io/hostname
              weight: 1
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: mariadb
          image: registry-1.docker.io/bitnami/mariadb:latest
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: mysql
              containerPort: 3306
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MARIADB_ROOT_PASSWORD:-}"
                  if [[ -f "${MARIADB_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MARIADB_ROOT_PASSWORD_FILE")
                  fi
                  mariadb-admin status -uroot -p"${password_aux}"
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MARIADB_ROOT_PASSWORD:-}"
                  if [[ -f "${MARIADB_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MARIADB_ROOT_PASSWORD_FILE")
                  fi
                  mariadb-admin ping -uroot -p"${password_aux}"
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 2Gi
              memory: 768Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /bitnami/mariadb
            - name: config
              mountPath: /opt/bitnami/mariadb/conf/my.cnf
              subPath: my.cnf
            - name: mariadb-credentials
              mountPath: /opt/bitnami/mariadb/secrets/
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mariadb/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mariadb/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mariadb/logs
              subPath: app-logs-dir
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: config
          configMap:
            name: lamp-app-mariadb
        - name: mariadb-credentials
          secret:
            secretName: lamp-app-mariadb
            items:
              - key: mariadb-root-password
                path: mariadb-root-password
              - key: mariadb-password
                path: mariadb-password
        - name: data
          emptyDir: {}
---
# Source: lamp-app/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: lamp-app
  labels:
    app: lamp-app
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: lamp-app
